--- a/social-bst/latex/annotated.tex
+++ b/social-bst/latex/annotated.tex
@@ -1,5 +1,5 @@
 \section{Estruturas de Dados}
 Aqui estão as estruturas de dados, uniões e suas respectivas descrições\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{structnodeA}{nodeA}} \\*Node A, utilizado na B\+ST principal que guarda as informações sobre cada pessoa }{\pageref{structnodeA}}{}
-\item\contentsline{section}{\mbox{\hyperlink{structnodeB}{nodeB}} }{\pageref{structnodeB}}{}
+\item\contentsline{section}{\mbox{\hyperlink{structnodeB}{nodeB}} \\*Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa }{\pageref{structnodeB}}{}
 \end{DoxyCompactList}
