--- a/social-bst/latex/structnodeA.tex
+++ b/social-bst/latex/structnodeA.tex
@@ -30,31 +30,13 @@ struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{structnodeA
 Node A, utilizado na B\+ST principal que guarda as informações sobre cada pessoa. 
 
 \subsection{Campos}
-\mbox{\Hypertarget{structnodeA_a618b5972693f9ff48d59387eced6eb09}\label{structnodeA_a618b5972693f9ff48d59387eced6eb09}} 
-\index{nodeA@{nodeA}!amgs@{amgs}}
-\index{amgs@{amgs}!nodeA@{nodeA}}
-\subsubsection{\texorpdfstring{amgs}{amgs}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+A\+::amgs}
-
-Ponteiro para um NodeB que é cabeça da arvore de amizades \mbox{\Hypertarget{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}\label{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}} 
+\mbox{\Hypertarget{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}\label{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}} 
 \index{nodeA@{nodeA}!data@{data}}
 \index{data@{data}!nodeA@{nodeA}}
 \subsubsection{\texorpdfstring{data}{data}}
 {\footnotesize\ttfamily int node\+A\+::data}
 
-Valor do node \mbox{\Hypertarget{structnodeA_af3a6276035abe3f5912b42d5334b84f2}\label{structnodeA_af3a6276035abe3f5912b42d5334b84f2}} 
-\index{nodeA@{nodeA}!maior@{maior}}
-\index{maior@{maior}!nodeA@{nodeA}}
-\subsubsection{\texorpdfstring{maior}{maior}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ node\+A\+::maior}
-
-Ponteiro para o node maior \mbox{\Hypertarget{structnodeA_a240c2a666e348701276be151d0dc6f9a}\label{structnodeA_a240c2a666e348701276be151d0dc6f9a}} 
-\index{nodeA@{nodeA}!menor@{menor}}
-\index{menor@{menor}!nodeA@{nodeA}}
-\subsubsection{\texorpdfstring{menor}{menor}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ node\+A\+::menor}
-
-Ponteiro para o node menor \mbox{\Hypertarget{structnodeA_abb21dead329c9c152aaf2544337b26d7}\label{structnodeA_abb21dead329c9c152aaf2544337b26d7}} 
+Valor do node \mbox{\Hypertarget{structnodeA_abb21dead329c9c152aaf2544337b26d7}\label{structnodeA_abb21dead329c9c152aaf2544337b26d7}} 
 \index{nodeA@{nodeA}!nome@{nome}}
 \index{nome@{nome}!nodeA@{nodeA}}
 \subsubsection{\texorpdfstring{nome}{nome}}
@@ -66,7 +48,25 @@ Nome da pessoa \mbox{\Hypertarget{structnodeA_a0ff9bb5e43589704c3ce4eb4434d76af}
 \subsubsection{\texorpdfstring{pai}{pai}}
 {\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ node\+A\+::pai}
 
-Ponteiro para o node diretamente acima (pai) 
+Ponteiro para o node diretamente acima (pai) \mbox{\Hypertarget{structnodeA_a240c2a666e348701276be151d0dc6f9a}\label{structnodeA_a240c2a666e348701276be151d0dc6f9a}} 
+\index{nodeA@{nodeA}!menor@{menor}}
+\index{menor@{menor}!nodeA@{nodeA}}
+\subsubsection{\texorpdfstring{menor}{menor}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ node\+A\+::menor}
+
+Ponteiro para o node menor \mbox{\Hypertarget{structnodeA_af3a6276035abe3f5912b42d5334b84f2}\label{structnodeA_af3a6276035abe3f5912b42d5334b84f2}} 
+\index{nodeA@{nodeA}!maior@{maior}}
+\index{maior@{maior}!nodeA@{nodeA}}
+\subsubsection{\texorpdfstring{maior}{maior}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ node\+A\+::maior}
+
+Ponteiro para o node maior \mbox{\Hypertarget{structnodeA_a618b5972693f9ff48d59387eced6eb09}\label{structnodeA_a618b5972693f9ff48d59387eced6eb09}} 
+\index{nodeA@{nodeA}!amgs@{amgs}}
+\index{amgs@{amgs}!nodeA@{nodeA}}
+\subsubsection{\texorpdfstring{amgs}{amgs}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+A\+::amgs}
+
+Ponteiro para um NodeB que é cabeça da arvore de amizades 
 
 A documentação para essa estrutura foi gerada a partir do seguinte arquivo\+:\begin{DoxyCompactItemize}
 \item 
