--- a/social-bst/latex/structnodeB.tex
+++ b/social-bst/latex/structnodeB.tex
@@ -2,6 +2,11 @@
 \label{structnodeB}\index{nodeB@{nodeB}}
 
 
+Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa.  
+
+
+
+
 {\ttfamily \#include $<$social.\+h$>$}
 
 \subsection*{Campos de Dados}
@@ -18,7 +23,7 @@ struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{structnodeB
 
 
 \subsection{Descrição detalhada}
-Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa 
+Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa. 
 
 \subsection{Campos}
 \mbox{\Hypertarget{structnodeB_a77629c0a64c8d9c973500956426a3839}\label{structnodeB_a77629c0a64c8d9c973500956426a3839}} 
@@ -27,25 +32,25 @@ Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa
 \subsubsection{\texorpdfstring{data}{data}}
 {\footnotesize\ttfamily int node\+B\+::data}
 
-Valor do node \mbox{\Hypertarget{structnodeB_a8c430943b45eba8b8ddb4007b0ed4d2c}\label{structnodeB_a8c430943b45eba8b8ddb4007b0ed4d2c}} 
-\index{nodeB@{nodeB}!maior@{maior}}
-\index{maior@{maior}!nodeB@{nodeB}}
-\subsubsection{\texorpdfstring{maior}{maior}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+B\+::maior}
-
-Ponteiro para o node maior \mbox{\Hypertarget{structnodeB_a433b5c01c13cba63ca218f887ce3fef7}\label{structnodeB_a433b5c01c13cba63ca218f887ce3fef7}} 
-\index{nodeB@{nodeB}!menor@{menor}}
-\index{menor@{menor}!nodeB@{nodeB}}
-\subsubsection{\texorpdfstring{menor}{menor}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+B\+::menor}
-
-Ponteiro para o node menor \mbox{\Hypertarget{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}\label{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}} 
+Valor do node \mbox{\Hypertarget{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}\label{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}} 
 \index{nodeB@{nodeB}!pai@{pai}}
 \index{pai@{pai}!nodeB@{nodeB}}
 \subsubsection{\texorpdfstring{pai}{pai}}
 {\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+B\+::pai}
 
-Ponteiro para o node diretamente acima (pai) 
+Ponteiro para o node diretamente acima (pai) \mbox{\Hypertarget{structnodeB_a433b5c01c13cba63ca218f887ce3fef7}\label{structnodeB_a433b5c01c13cba63ca218f887ce3fef7}} 
+\index{nodeB@{nodeB}!menor@{menor}}
+\index{menor@{menor}!nodeB@{nodeB}}
+\subsubsection{\texorpdfstring{menor}{menor}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+B\+::menor}
+
+Ponteiro para o node menor \mbox{\Hypertarget{structnodeB_a8c430943b45eba8b8ddb4007b0ed4d2c}\label{structnodeB_a8c430943b45eba8b8ddb4007b0ed4d2c}} 
+\index{nodeB@{nodeB}!maior@{maior}}
+\index{maior@{maior}!nodeB@{nodeB}}
+\subsubsection{\texorpdfstring{maior}{maior}}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ node\+B\+::maior}
+
+Ponteiro para o node maior 
 
 A documentação para essa estrutura foi gerada a partir do seguinte arquivo\+:\begin{DoxyCompactItemize}
 \item 
