Change all variables named data to id

--- a/social-bst/latex/social_8h.tex
+++ b/social-bst/latex/social_8h.tex
@@ -305,6 +305,6 @@ Função que deleta um nó de todas as B\+S\+Ts de Amizades de todos os nós de 
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó cabeça da B\+ST de tipo A \\
 \hline
-{\em Valor} & do nó a ser deletado \\
+{\em data} & Valor do nó a ser deletado \\
 \hline
 \end{DoxyParams}
