Update Doxygen docs

--- a/social-bst/latex/structnodeA.tex
+++ b/social-bst/latex/structnodeA.tex
@@ -12,7 +12,7 @@ Node A, utilizado na B\+ST principal que guarda as informações sobre cada pess
 \subsection*{Campos de Dados}
 \begin{DoxyCompactItemize}
 \item 
-int \mbox{\hyperlink{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}{data}}
+int \mbox{\hyperlink{structnodeA_a3afa6c3b262465d9ff1e0103cd36acb2}{id}}
 \item 
 char \mbox{\hyperlink{structnodeA_abb21dead329c9c152aaf2544337b26d7}{nome}} \mbox{[}101\mbox{]}
 \item 
@@ -30,11 +30,11 @@ struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{structnodeA
 Node A, utilizado na B\+ST principal que guarda as informações sobre cada pessoa. 
 
 \subsection{Campos}
-\mbox{\Hypertarget{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}\label{structnodeA_ad3adb17ccc0d5912b4642e49b7f2cf91}} 
-\index{nodeA@{nodeA}!data@{data}}
-\index{data@{data}!nodeA@{nodeA}}
-\subsubsection{\texorpdfstring{data}{data}}
-{\footnotesize\ttfamily int node\+A\+::data}
+\mbox{\Hypertarget{structnodeA_a3afa6c3b262465d9ff1e0103cd36acb2}\label{structnodeA_a3afa6c3b262465d9ff1e0103cd36acb2}} 
+\index{nodeA@{nodeA}!id@{id}}
+\index{id@{id}!nodeA@{nodeA}}
+\subsubsection{\texorpdfstring{id}{id}}
+{\footnotesize\ttfamily int node\+A\+::id}
 
 Valor do node \mbox{\Hypertarget{structnodeA_abb21dead329c9c152aaf2544337b26d7}\label{structnodeA_abb21dead329c9c152aaf2544337b26d7}} 
 \index{nodeA@{nodeA}!nome@{nome}}
