--- a/social-bst/latex/structnodeB.tex
+++ b/social-bst/latex/structnodeB.tex
@@ -12,7 +12,7 @@ Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa.
 \subsection*{Campos de Dados}
 \begin{DoxyCompactItemize}
 \item 
-int \mbox{\hyperlink{structnodeB_a77629c0a64c8d9c973500956426a3839}{data}}
+int \mbox{\hyperlink{structnodeB_ae92bbf4fb34b58f7513991ae67c910c1}{id}}
 \item 
 struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}{pai}}
 \item 
@@ -26,11 +26,11 @@ struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{structnodeB
 Node B, utilizado nas B\+S\+Ts que guardam as amizades de cada pessoa. 
 
 \subsection{Campos}
-\mbox{\Hypertarget{structnodeB_a77629c0a64c8d9c973500956426a3839}\label{structnodeB_a77629c0a64c8d9c973500956426a3839}} 
-\index{nodeB@{nodeB}!data@{data}}
-\index{data@{data}!nodeB@{nodeB}}
-\subsubsection{\texorpdfstring{data}{data}}
-{\footnotesize\ttfamily int node\+B\+::data}
+\mbox{\Hypertarget{structnodeB_ae92bbf4fb34b58f7513991ae67c910c1}\label{structnodeB_ae92bbf4fb34b58f7513991ae67c910c1}} 
+\index{nodeB@{nodeB}!id@{id}}
+\index{id@{id}!nodeB@{nodeB}}
+\subsubsection{\texorpdfstring{id}{id}}
+{\footnotesize\ttfamily int node\+B\+::id}
 
 Valor do node \mbox{\Hypertarget{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}\label{structnodeB_a8b1942214da0ec30a911d3d8f1b2f142}} 
 \index{nodeB@{nodeB}!pai@{pai}}
