--- a/social-bst/latex/social_8h.tex
+++ b/social-bst/latex/social_8h.tex
@@ -15,17 +15,17 @@ struct \mbox{\hyperlink{structnodeB}{nodeB}}
 \subsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
-struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$ \mbox{\hyperlink{social_8h_a6e9c5cb23fa954d5f6a592bf459747cc}{allocA}} (int data, char $\ast$nome)
+struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$ \mbox{\hyperlink{social_8h_af52ab4742d34db7272e8862a4d6c3cad}{allocA}} (int id, char $\ast$nome)
 \begin{DoxyCompactList}\small\item\em Função auxiliar que alloca em memoria um espaço para um Node A. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{social_8h_a1ee1ab55bfae72763bf608dd21c250b3}{allocB}} (int data)
+struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{social_8h_a2770165399308ecd74880c289857ff76}{allocB}} (int id)
 \begin{DoxyCompactList}\small\item\em Função auxiliar que alloca em memoria um espaço para um Node B. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$ \mbox{\hyperlink{social_8h_a982806897c10c78fd70e92331fa6f0a0}{find}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int data)
+struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$ \mbox{\hyperlink{social_8h_a3329efeddbd0f6345d9dbf918e835c9e}{find}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função que busca em uma B\+ST do tipo A um determinado node pelo seu valor. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{social_8h_afe9403e5b8edfb2538aba7ecb40c1662}{findB}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head, int data)
+struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{social_8h_a088773d8030f46fab333b18b23e7920a}{findB}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função que busca em uma B\+ST do tipo B um determinado node pelo seu valor. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{social_8h_afd24a78dea125213f054fcc154e7d0aa}{insertA}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int data, char $\ast$nome)
+void \mbox{\hyperlink{social_8h_a520ba5fef65180125d5bf3f8157eae5d}{insertA}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int id, char $\ast$nome)
 \begin{DoxyCompactList}\small\item\em Função que dada uma B\+ST do tipo A, insere um novo nó no local apropriado. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{social_8h_aafee258cdaa10980e5f54f98b2a93c0c}{insert\+B\+\_\+aux}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head, int data)
+void \mbox{\hyperlink{social_8h_ae6cbcf58ffc58a98805517c2f725c218}{insert\+B\+\_\+aux}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função auxiliar à insertB, faz um trabalho similar a insertA. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{social_8h_a64988677eb158bf4962b51bc2fdd90d0}{insertB}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int p1, int p2)
 \begin{DoxyCompactList}\small\item\em Função que dada uma B\+ST do tipo A, cria uma conexão entre dois de seus nós inserindo um novo nó em suas B\+S\+Ts de tipo B. \end{DoxyCompactList}\item 
@@ -35,13 +35,13 @@ void \mbox{\hyperlink{social_8h_aa0124495626522220cc54444764de795}{print\+\_\+or
 \begin{DoxyCompactList}\small\item\em Função que imprime no terminal os id\textquotesingle{}s de uma B\+ST do tipo A em ordem crescente. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{social_8h_a8b3f0230bc924cf12d4756c0a37778a3}{print\+\_\+ordemB}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head)
 \begin{DoxyCompactList}\small\item\em Função que imprime no terminal os id\textquotesingle{}s de uma B\+ST do tipo B em ordem crescente. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{social_8h_a15fd7a22b54eaa5ddd084cf3d5a3a5be}{info}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int data)
+void \mbox{\hyperlink{social_8h_ad5f488f2d34ed039c725db64bf7a81f3}{info}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função que busca um nó e imprime todos os seus dados. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{social_8h_a86d192f1655ca8ea2b7a0ef1571295fd}{deleteB}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head, int data)
+struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$ \mbox{\hyperlink{social_8h_a920aeb3ae4170adc0078da3a56254486}{deleteB}} (struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função que deleta um nó de uma B\+ST de tipo B. \end{DoxyCompactList}\item 
-struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$ \mbox{\hyperlink{social_8h_af7b6f00991f2441eb9b2fb22ecc388f0}{deleteA}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int data)
+struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$ \mbox{\hyperlink{social_8h_a137ef5a6a98d8318fedb3dcff70108c9}{deleteA}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função que deleta um nó de uma B\+ST de tipo A. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{social_8h_ac8569128891422527f361e58dbf6a146}{delete\+Amgs}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int data)
+void \mbox{\hyperlink{social_8h_ab37893a4ff6d54c4cd46aec38cde4878}{delete\+Amgs}} (struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$head, int id)
 \begin{DoxyCompactList}\small\item\em Função que deleta um nó de todas as B\+S\+Ts de Amizades de todos os nós de uma B\+ST de tipo A. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -51,11 +51,11 @@ Header de funções do Social-\/\+B\+ST.
 
 
 \subsection{Funções}
-\mbox{\Hypertarget{social_8h_a6e9c5cb23fa954d5f6a592bf459747cc}\label{social_8h_a6e9c5cb23fa954d5f6a592bf459747cc}} 
+\mbox{\Hypertarget{social_8h_af52ab4742d34db7272e8862a4d6c3cad}\label{social_8h_af52ab4742d34db7272e8862a4d6c3cad}} 
 \index{social.h@{social.h}!allocA@{allocA}}
 \index{allocA@{allocA}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{allocA()}{allocA()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ allocA (\begin{DoxyParamCaption}\item[{int}]{data,  }\item[{char $\ast$}]{nome }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ allocA (\begin{DoxyParamCaption}\item[{int}]{id,  }\item[{char $\ast$}]{nome }\end{DoxyParamCaption})}
 
 
 
@@ -63,7 +63,7 @@ Função auxiliar que alloca em memoria um espaço para um Node A.
 
 
 \begin{DoxyParams}{Parâmetros}
-{\em data} & Valor do node \\
+{\em id} & Valor do node \\
 \hline
 {\em nome} & Nome associado ao node \\
 \hline
@@ -71,11 +71,11 @@ Função auxiliar que alloca em memoria um espaço para um Node A.
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o novo nó 
 \end{DoxyReturn}
-\mbox{\Hypertarget{social_8h_a1ee1ab55bfae72763bf608dd21c250b3}\label{social_8h_a1ee1ab55bfae72763bf608dd21c250b3}} 
+\mbox{\Hypertarget{social_8h_a2770165399308ecd74880c289857ff76}\label{social_8h_a2770165399308ecd74880c289857ff76}} 
 \index{social.h@{social.h}!allocB@{allocB}}
 \index{allocB@{allocB}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{allocB()}{allocB()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ allocB (\begin{DoxyParamCaption}\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ allocB (\begin{DoxyParamCaption}\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -83,17 +83,17 @@ Função auxiliar que alloca em memoria um espaço para um Node B.
 
 
 \begin{DoxyParams}{Parâmetros}
-{\em data} & Valor do node \\
+{\em id} & Valor do node \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o novo nó 
 \end{DoxyReturn}
-\mbox{\Hypertarget{social_8h_a982806897c10c78fd70e92331fa6f0a0}\label{social_8h_a982806897c10c78fd70e92331fa6f0a0}} 
+\mbox{\Hypertarget{social_8h_a3329efeddbd0f6345d9dbf918e835c9e}\label{social_8h_a3329efeddbd0f6345d9dbf918e835c9e}} 
 \index{social.h@{social.h}!find@{find}}
 \index{find@{find}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{find()}{find()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ find (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ find (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -103,17 +103,17 @@ Função que busca em uma B\+ST do tipo A um determinado node pelo seu valor.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para um nó inicial de tipo A que será percorrido \\
 \hline
-{\em data} & Valor do nó que deve ser buscado \\
+{\em id} & Valor do nó que deve ser buscado \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o nó buscado caso dê certo, caso contrário será N\+U\+LL 
 \end{DoxyReturn}
-\mbox{\Hypertarget{social_8h_afe9403e5b8edfb2538aba7ecb40c1662}\label{social_8h_afe9403e5b8edfb2538aba7ecb40c1662}} 
+\mbox{\Hypertarget{social_8h_a088773d8030f46fab333b18b23e7920a}\label{social_8h_a088773d8030f46fab333b18b23e7920a}} 
 \index{social.h@{social.h}!findB@{findB}}
 \index{findB@{findB}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{findB()}{findB()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ findB (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ findB (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -123,17 +123,17 @@ Função que busca em uma B\+ST do tipo B um determinado node pelo seu valor.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para um nó inicial de tipo B que será percorrido \\
 \hline
-{\em data} & Valor do nó que deve ser buscado \\
+{\em id} & Valor do nó que deve ser buscado \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o nó buscado caso dê certo, caso contrário será N\+U\+LL 
 \end{DoxyReturn}
-\mbox{\Hypertarget{social_8h_afd24a78dea125213f054fcc154e7d0aa}\label{social_8h_afd24a78dea125213f054fcc154e7d0aa}} 
+\mbox{\Hypertarget{social_8h_a520ba5fef65180125d5bf3f8157eae5d}\label{social_8h_a520ba5fef65180125d5bf3f8157eae5d}} 
 \index{social.h@{social.h}!insertA@{insertA}}
 \index{insertA@{insertA}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{insertA()}{insertA()}}
-{\footnotesize\ttfamily void insertA (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{data,  }\item[{char $\ast$}]{nome }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void insertA (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{id,  }\item[{char $\ast$}]{nome }\end{DoxyParamCaption})}
 
 
 
@@ -143,16 +143,16 @@ Função que dada uma B\+ST do tipo A, insere um novo nó no local apropriado.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó de tipo A a partir do qual o novo nó será inserido \\
 \hline
-{\em data} & Valor do nó a ser inserido \\
+{\em id} & Valor do nó a ser inserido \\
 \hline
 {\em nome} & Nome da pessoa a ser cadastrada \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{social_8h_aafee258cdaa10980e5f54f98b2a93c0c}\label{social_8h_aafee258cdaa10980e5f54f98b2a93c0c}} 
+\mbox{\Hypertarget{social_8h_ae6cbcf58ffc58a98805517c2f725c218}\label{social_8h_ae6cbcf58ffc58a98805517c2f725c218}} 
 \index{social.h@{social.h}!insertB\_aux@{insertB\_aux}}
 \index{insertB\_aux@{insertB\_aux}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{insertB\_aux()}{insertB\_aux()}}
-{\footnotesize\ttfamily void insert\+B\+\_\+aux (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void insert\+B\+\_\+aux (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -162,7 +162,7 @@ Função auxiliar à insertB, faz um trabalho similar a insertA.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó de tipo A a partir do qual o novo nó será inserido \\
 \hline
-{\em data} & Valor do nó a ser inserido \\
+{\em id} & Valor do nó a ser inserido \\
 \hline
 \end{DoxyParams}
 \mbox{\Hypertarget{social_8h_a64988677eb158bf4962b51bc2fdd90d0}\label{social_8h_a64988677eb158bf4962b51bc2fdd90d0}} 
@@ -234,11 +234,11 @@ Função que imprime no terminal os id\textquotesingle{}s de uma B\+ST do tipo B
 {\em head} & Ponteiro para a cabeça da B\+ST do tipo B \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{social_8h_a15fd7a22b54eaa5ddd084cf3d5a3a5be}\label{social_8h_a15fd7a22b54eaa5ddd084cf3d5a3a5be}} 
+\mbox{\Hypertarget{social_8h_ad5f488f2d34ed039c725db64bf7a81f3}\label{social_8h_ad5f488f2d34ed039c725db64bf7a81f3}} 
 \index{social.h@{social.h}!info@{info}}
 \index{info@{info}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{info()}{info()}}
-{\footnotesize\ttfamily void info (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void info (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -248,14 +248,14 @@ Função que busca um nó e imprime todos os seus dados.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó cabeça da B\+ST em que este nó está inserido \\
 \hline
-{\em data} & Valor do nó a ser mostrado \\
+{\em id} & Valor do nó a ser mostrado \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{social_8h_a86d192f1655ca8ea2b7a0ef1571295fd}\label{social_8h_a86d192f1655ca8ea2b7a0ef1571295fd}} 
+\mbox{\Hypertarget{social_8h_a920aeb3ae4170adc0078da3a56254486}\label{social_8h_a920aeb3ae4170adc0078da3a56254486}} 
 \index{social.h@{social.h}!deleteB@{deleteB}}
 \index{deleteB@{deleteB}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{deleteB()}{deleteB()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ deleteB (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeB}{nodeB}}$\ast$ deleteB (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeB}{nodeB}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -265,17 +265,17 @@ Função que deleta um nó de uma B\+ST de tipo B.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó cabeça da B\+ST \\
 \hline
-{\em data} & Valor do nó a ser deletado \\
+{\em id} & Valor do nó a ser deletado \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o nó cabeça da B\+ST modificada 
 \end{DoxyReturn}
-\mbox{\Hypertarget{social_8h_af7b6f00991f2441eb9b2fb22ecc388f0}\label{social_8h_af7b6f00991f2441eb9b2fb22ecc388f0}} 
+\mbox{\Hypertarget{social_8h_a137ef5a6a98d8318fedb3dcff70108c9}\label{social_8h_a137ef5a6a98d8318fedb3dcff70108c9}} 
 \index{social.h@{social.h}!deleteA@{deleteA}}
 \index{deleteA@{deleteA}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{deleteA()}{deleteA()}}
-{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ deleteA (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily struct \mbox{\hyperlink{structnodeA}{nodeA}}$\ast$ deleteA (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -285,17 +285,17 @@ Função que deleta um nó de uma B\+ST de tipo A.
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó cabeça da B\+ST \\
 \hline
-{\em data} & Valor do nó a ser deletado \\
+{\em id} & Valor do nó a ser deletado \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o nó cabeça da B\+ST modificada 
 \end{DoxyReturn}
-\mbox{\Hypertarget{social_8h_ac8569128891422527f361e58dbf6a146}\label{social_8h_ac8569128891422527f361e58dbf6a146}} 
+\mbox{\Hypertarget{social_8h_ab37893a4ff6d54c4cd46aec38cde4878}\label{social_8h_ab37893a4ff6d54c4cd46aec38cde4878}} 
 \index{social.h@{social.h}!deleteAmgs@{deleteAmgs}}
 \index{deleteAmgs@{deleteAmgs}!social.h@{social.h}}
 \subsubsection{\texorpdfstring{deleteAmgs()}{deleteAmgs()}}
-{\footnotesize\ttfamily void delete\+Amgs (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void delete\+Amgs (\begin{DoxyParamCaption}\item[{struct \mbox{\hyperlink{structnodeA}{nodeA}} $\ast$}]{head,  }\item[{int}]{id }\end{DoxyParamCaption})}
 
 
 
@@ -305,6 +305,6 @@ Função que deleta um nó de todas as B\+S\+Ts de Amizades de todos os nós de 
 \begin{DoxyParams}{Parâmetros}
 {\em head} & Ponteiro para o nó cabeça da B\+ST de tipo A \\
 \hline
-{\em data} & Valor do nó a ser deletado \\
+{\em id} & Valor do nó a ser deletado \\
 \hline
 \end{DoxyParams}
